Fix sidebar images overflow with max-width

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -90,6 +90,10 @@ aside div.widget ol:last-child {
     margin-bottom: 0;
 }
 
+aside div.widget img {
+    max-width: 100%;
+}
+
 /* Footer */
 footer {
     padding: 40px 0;
